增加bfs算法解决功能，但存在bug，并非最优解